# BOBOTexture

./: .gitignore  AGENTS.md  README.md  build.bat  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: build-win11.sh  sync-win11-dist.mjs  zig-windres
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/ipc/: atlaspro.rs  mod.rs  system.rs
src-tauri/src/log/: mod.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/tools/atlaspro/: compositor.rs  mod.rs  model.rs  packer.rs  pipeline.rs  preprocess.rs  resolution_variants.rs  scanner.rs  sub_sprite_id.rs  unity_meta.rs
src-tauri/src/tools/atlaspro/exporters/: asset_meta.rs  json_array.rs  mod.rs  png_meta.rs  tmp_bundle.rs  tmp_sprite_asset.rs
src/components/layout/: ExportBar.vue  PanelCenter.vue  PanelLeft.vue  PanelRight.vue  Shell.vue  StatusBar.vue  Toolbar.vue  WindowChrome.vue
src/components/preview/: AtlasPreview.vue  PreviewControls.vue  PreviewEmpty.vue  PreviewLoading.vue
src/components/settings/: AdvancedSection.vue  ExportSection.vue  LayoutSection.vue  ResultSection.vue  SettingsModal.vue  SettingsPanel.vue  TrimSection.vue  (+2 more)
src/composables/: useCanvas.ts  useFileDrop.ts  useKeyboard.ts  usePanZoom.ts  useProjectFileActions.ts
src/i18n/: index.ts
src/ipc/: atlaspro.ts  system.ts
src/stores/: app.ts  pack.ts  project.ts  report.ts  ui.ts
src/styles/: base.css
(+15 files in other folders)
