[package]
name = "bobotexture-v2"
version = "0.1.0"
description = "BOBOTexture V2 — TexturePacker-compatible sprite atlas tool with Unity TMP support"
authors = ["BOBOTexture"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "bobotexture_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
image = { version = "0.25", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
walkdir = "2"

# AtlasPacker Pro dependencies
rectangle-pack = "0.4"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
quick-xml = { version = "0.36", features = ["serialize"] }
md5 = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
sha2 = "0.10"
